@@ -51,14 +51,15 @@ the object code.</LI></ul>
 </ul>
 
 <h2>Documentation</h2>
+<p>This short <a href="docs/manual/html/index.html">manual</a> gives an overview of the libxml++ API.</p>
 <p>
 You can browse online the Reference documentation generated by
 <a href="http://www.stack.nl/~dimitri/doxygen/index.html">
 <img src="reference/1.0/html/doxygen.png" alt="doxygen" align="middle" border=0 ></a>
 </p>
 <ul>
-<li><a href="reference/1.0/html/hierarchy.html">1.0 API</a></li>
-<li><a href="reference/2.8/html/hierarchy.html">2.8 API</a></li>
+<li><a href="docs/reference/1.0/html/hierarchy.html">1.0 API</a></li>
+<li><a href="docs/reference/2.8/html/hierarchy.html">2.8 API</a></li>
 </ul>
 
 <h2>Development</h2>
